# rag-project

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  schemas.py  test_rag.py
.github/workflows/: ci.yml  nightly-reindex.yml
api/: Dockerfile  main.py  schemas.py
artifacts/: .gitkeep
data_cleaning/: clean.py  ner_srl.py  ruleset.yaml
data_ingestion/: ingest.py
data_ingestion/connectors/: __init__.py  api.py  csv.py  pdf.py  web.py
docs/: architecture.md  eval_report_template.md
embedding_service/: config.yaml  embed.py
evaluation/: evaluate.py  metrics.py
evaluation/notebooks/: .gitkeep
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
rag_pipeline/: cache.py  config.yaml  generate.py  rerank.py  retrieve.py
scripts/: make_dataset.sh  rebuild_index.sh  run_eval.sh
tests/: test_api.py
training/: finetune_lora.py  synthesize_qca.py
training/logs/: .gitkeep
vector_store/: chroma_index.py  faiss_index.py  manifest.json  pinecone_index.py
